--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,13 +6,13 @@ spring.datasource.hikari.maximumPoolSize=2
 spring.datasource.hikari.poolName=HikariPoolZZZ
 
 ## MySQL
-#spring.datasource.url=jdbc:mysql://localhost:3306/vote
-#spring.datasource.username=root
-#spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://localhost:3306/vote
+spring.datasource.username=root
+spring.datasource.password=password
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-#spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = update
