Prepared to use mysql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,11 @@
-logging.level.com.mac.api = info
+#logging.level.com.mac.api = info
+
+logging.level.com.zaxxer=DEBUG
 
 ## Pull Connections
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=2
 spring.datasource.hikari.poolName=HikariPoolZZZ
-
-## MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/vote
-spring.datasource.username=root
-spring.datasource.password=password
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
@@ -16,3 +13,8 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
+
+## MySQL
+spring.datasource.url=${OPENSHIFT_DB_URL}:${OPENSHIFT_DB_PORT}/${OPENSHIFT_DB_NAME}
+spring.datasource.username=${OPENSHIFT_DB_USER}
+spring.datasource.password=${OPENSHIFT_DB_PASSWORD}
